# noter

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: tests.yaml
completions/: noter.fish
src/: lib.rs  main.rs
