[package]
name = "noter"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "noter"
path = "src/main.rs"

[lib]
name = "noter"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
clap = "3.0.0"
dirs = "1.0.4"
rand = "0.8.4"
regex = "1.5"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1.0", default-features = true }
tempfile = "3.2.0"
terminal_size = "0.1.17"
